syntax = "proto3";

service CreateIdController {
  rpc CreateId (CreateId) returns (CreateIdResult);
}

message CreateId{
}
message CreateIdResult {
  string new_id = 1;
}